fix(question-filter): Removing info and fixing filters

--- a/app/modules/audioPad/views/main.html
+++ b/app/modules/audioPad/views/main.html
@@ -2,109 +2,7 @@
   <div ng-http-loader template="modules/audioPad/views/loader.html"></div>
 
   <div class="container-fluid">
-
-    <div class="header row">
-      <div class="container">
-        <div class="row">
-          <div class="menu-group row" ng-if="mainCtrl.questionsConfig.selectedMode.indexOf('md-') === -1">
-            <div class=" col-sm-4">
-              <question-group groups="groups"></question-group>
-            </div>
-            <div class=" col-sm-4">
-              <question-filter questions="questions" categories="categories"></question-filter>
-            </div>
-            <div class=" col-sm-4">
-              <question-mode selected-mode="mainCtrl.questionsConfig.selectedMode"></question-mode>
-            </div>
-          </div>
-          <div>
-            <strong ng-if="mainCtrl.questionsConfig.selectedMode === 'md-view-results'">Completed Test Review
-              Mode</strong>
-          </div>
-          <div class="row">
-            <div class=" col-sm-7">
-              <question-number questions="questions"></question-number>
-            </div>
-            <div class=" col-sm-5">
-              <question-timer ng-if="mainCtrl.questionsConfig.selectedMode !== 'md-view-results'"></question-timer>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="container content">
-      <div class="col-xs-12 col-sm-9">
-       <div class="row questions-navigator ">
-  <questions-navigator questions="questions"
-                               selected-mode="mainCtrl.questionsConfig.selectedMode"></questions-navigator>
-                               </div>
-        <div class="row">
-          <question-type questions="questions" selected-mode="mainCtrl.questionsConfig.selectedMode"></question-type>
-        </div>
-
-
-        <div class="row">
-          <question-description questions="questions"></question-description>
-        </div>
-
-        <div class="row diagram">
-          <questions-diagram questions="questions"></questions-diagram>
-        </div>
-
-        <div class="row">
-          <question-options questions="questions"
-                            selected-mode="mainCtrl.questionsConfig.selectedMode"></question-options>
-        </div>
-
-
-        <div class="row questions-navigator">
-
-          <questions-main-filter questions="questions"
-                               selected-mode="mainCtrl.questionsConfig.selectedMode"></questions-main-filter>
-        </div>
-
-
-      </div>
-
-
-      <div class="col-xs-12 col-sm-3 text-right" style="padding-right: 0">
-        <div>
-          <question-counter questions="questions"
-                            ng-if="mainCtrl.questionsConfig.selectedMode === 'md-view-results' || mainCtrl.questionsConfig.selectedMode === 'rq-study'"
-                            selected-mode="mainCtrl.questionsConfig.selectedMode"></question-counter>
-        </div>
-
-        <div>
-          <questions-answered questions="questions"
-                              selected-mode="mainCtrl.questionsConfig.selectedMode"></questions-answered>
-        </div>
-
-        <div>
-          <questions-score
-            ng-if="mainCtrl.questionsConfig.selectedMode === 'md-view-results' || mainCtrl.questionsConfig.selectedMode === 'rq-study'"
-            questions="questions" selected-mode="mainCtrl.questionsConfig.selectedMode"></questions-score>
-        </div>
-
-        <div>
-          <questions-mode-buttons questions="questions"
-                                  selected-mode="mainCtrl.questionsConfig.selectedMode"></questions-mode-buttons>
-        </div>
-
-        <div>
-          <button class="btn btn-lighter-green width-100"
-                  ng-if="mainCtrl.questionsConfig.selectedMode !== 'md-take-test' && mainCtrl.questionsConfig.selectedMode !== 'md-finish-test'" ng-click="exit()">Exit
-          </button>
-          <button class="btn btn-lighter-green width-100"
-                  ng-if="mainCtrl.questionsConfig.selectedMode === 'md-take-test' || mainCtrl.questionsConfig.selectedMode === 'md-finish-test'" ng-click="finishTest()">Done with
-            test
-          </button>
-        </div>
-      </div>
-
-    </div>
-
+    This is the audioPad application Main page
 
   </div>
 
